Link assembled tools in CI